# mismap-qc

./: .gitignore  CLAUDE.md  DIARY.md  LICENSE  README.md  demo.py  make_toy_data.py  mismap_qc.py  pretty_missing.py  pyproject.toml  test_pretty_missing.ipynb
.github/workflows/: tests.yml
data/: toy_rnaseq.csv
docs/: PLAN_new_plots.md
examples/: PLAN_cptac_notebook.md  cptac_proteomics.ipynb  requirements.txt
tests/: conftest.py  test_completeness_bars_realdata.py  test_mismap_qc.py
