[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mismap-qc"
version = "0.1.0"
description = "Missing-data matrix for RNA-Seq and proteomics QC"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Alexander Foertsch" }]
keywords = ["bioinformatics", "rna-seq", "proteomics", "visualization", "missing-data", "qc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
interactive = ["plotly"]
dev = ["pytest", "plotly"]

[project.urls]
Repository = "https://github.com/afoertsch/mismap-qc"

[tool.hatch.build.targets.wheel]
include = ["mismap_qc.py"]
